[package]
name = "pikeys"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "pikeys"
test = false
bench = false

[dependencies]
embedded-hal = "0.2.7"
rp-pico = "0.6.0"
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
panic-halt = "0.2.0"
cortex-m-rtic = "1.1.3"
rp2040-hal = { version = "0.8.0", features = ["rtic-monotonic", "rt"] }
fugit = "0.3.6"
rp2040-monotonic = "1.2.0"
keyberon = "0.1.1"
usb-device = "0.2.9"
generic-array = "0.14.6"
