[package]
name = "pikeys"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "pikeys"
test = false
bench = false

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = { version = "0.7.3", features = ["device"] }
cortex-m-rtic = "1.1.4"
embedded-hal = "0.2.7"
embedded-time = "0.12.1"
keyberon = { git = "https://github.com/TeXitoi/keyberon.git", branch = "master" }
panic-halt = "0.2.0"
rp-pico = "0.7.0"
rp2040-hal = { version = "0.8.0", features = ["rt"] }
usb-device = "0.2.9"
usbd-hid = "0.6.1"
usbd-serial = "0.1.1"

[profile.dev]
lto = true
incremental = true
opt-level = "z"
debug = true

[profile.release]
lto = true
incremental = false
opt-level = "z"
debug = false
